--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.4"
+    "@astrojs/mdx": "^4.2.4",
+    "@tailwindcss/vite": "^4.1.4",
+    "astro": "^5.7.4",
+    "date-fns": "^4.1.0",
+    "tailwindcss": "^4.1.4"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^22.14.1"
   }
 }
