--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.2.4",
+    "@astrojs/sitemap": "^3.3.1",
     "@tailwindcss/vite": "^4.1.4",
     "astro": "^5.7.4",
     "date-fns": "^4.1.0",
